# CheckAndTransfer

./: Director.cpp  Director_input.cpp  README.md  checkandtransfer.cpp  classreaddir.cpp  otherreaddir.cpp
buildproj/: CMakeCache.txt  CMakeLists.txt  Makefile  check  cmake_install.cmake
checkdir/: CMakeCache.txt  CMakeLists.txt  Makefile  check  cmake_install.cmake
include/: Director.h  Director_input.h  Fisier.h
